--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/krispya/react-three-update#readme",
   "dependencies": {
-    "zustand": "^3.7.2"
+    "zustand": "^4.0.0-beta.3"
   },
   "peerDependencies": {
     "@react-three/fiber": ">=8.0",
