--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "jest": "^27.5.1",
-    "rollup": "^2.70.1"
+    "rollup": "^2.70.1",
+    "@types/three": "^0.139.0"
   },
   "files": [
     "dist",
