--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "./dist/types"
   },
-  "exclude": ["node_modules", ".turbo"]
+  "exclude": ["./node_modules/**/*"],
+  "include": ["./src"]
 }
