--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@types/three": "^0.139.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
     "jest": "^27.5.1",
     "rollup": "^2.70.1",
     "typescript": "^4.6.4"
