--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
